<resources>
    <string name="app_name">Implicit Intents Demo</string>
    <string name="header_text">Implicit Intents Demo</string>
    <string name="open_web_page">Open Web Page</string>
    <string name="hint_web_url">Enter URL (e.g., google.com)</string>
    <string name="btn_open_web">Open in Browser</string>
    <string name="send_email">Send Email</string>
    <string name="hint_email_address">Email Address</string>
    <string name="hint_email_subject">Subject</string>
    <string name="hint_email_body">Email Body</string>
    <string name="btn_send_email">Send Email</string>
    <string name="share_text">Share Text</string>
    <string name="hint_share_text">Enter text to share</string>
    <string name="btn_share_text">Share Text</string>
    <string name="additional_actions">Additional Actions</string>
    <string name="btn_dial_phone">Open Dialer</string>
    <string name="btn_open_maps">Open Google Maps</string>
    <string name="toast_enter_url">Please enter a URL</string>
    <string name="toast_cannot_open_url">Cannot open this URL</string>
    <string name="toast_enter_email">Please enter an email address</string>
    <string name="toast_no_email_app">No email app found</string>
    <string name="toast_enter_share_text">Please enter text to share</string>
    <string name="share_via">Share via</string>
</resources>